--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <h2>学校紹介ページ</h2>
-    <h2>班員一覧</h2>
+    <ul>
+        <h3>班員一覧</h3>
+        <li><a href="kawakami.html">川上</a></li>
+        <li><a href="koji.html">小路</a></li>
+        <li><a href="satou .html">佐藤</a></li>
+        <li><a href="tokuda.html">徳田</a></li>   
+    </ul>
     <script src="jsp/app.js"></script>
 </body>
 </html>
