個人ファイル更新

--- a/kawakami.html
+++ b/kawakami.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,9 +9,10 @@
     <h2>小路の出身校紹介ページ（作成者：川上）</h2>
     <img src="https://kasaoka.sub.jp/15/09/0905/DSC06608.jpg">
     <h2>学校名：龍谷高校</h2>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
+    <h2>創立：86年</h2>
+    <h2>特徴：時間にルーズ</h2>
+    <h2>所属クラス：３年G組</h2>
+    <h2>起きた事件：卒業式の日に誰かがトイレでたばこすっとってそれがばれてみんな持ち検されたり怒られたりして最悪の卒業式だった。</h2>
 <script src="jsp/app.js"></script>
 </body>
 </html>
