おみくじの追加

--- a/kawakami.html
+++ b/kawakami.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <title>学校紹介（川上）</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        #result {
+            margin-top: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
     <h2>小路の出身校紹介ページ（作成者：川上）</h2>
@@ -13,6 +25,9 @@
     <h2>特徴：時間にルーズ</h2>
     <h2>所属クラス：３年G組</h2>
     <h2>起きた事件：卒業式の日に誰かがトイレでたばこすっとってそれがばれてみんな持ち検されたり怒られたりして最悪の卒業式だった。</h2>
+    <h1>おみくじ</h1>
+    <button id="drawButton">おみくじを引く</button>
+    <div id="result"></div>
 <script src="jsp/app.js"></script>
 </body>
 </html>
