回数表示とリセットボタンの追加

--- a/kawakami.html
+++ b/kawakami.html
@@ -15,6 +15,10 @@
             font-size: 24px;
             font-weight: bold;
         }
+        #counter{
+            margin-top: 10%;
+            font-size: 18px;
+        }
     </style>
 </head>
 <body>
@@ -27,7 +31,9 @@
     <h2>起きた事件：卒業式の日に誰かがトイレでたばこすっとってそれがばれてみんな持ち検されたり怒られたりして最悪の卒業式だった。</h2>
     <h1>おみくじ</h1>
     <button id="drawButton">おみくじを引く</button>
+    <button id="resetButton">リセット</button>
     <div id="result"></div>
+    <div id="counter">ボタンが押された回数: 0</div>
 <script src="jsp/app.js"></script>
 </body>
 </html>
