--- a/koji.html
+++ b/koji.html
@@ -1,10 +1,26 @@
-!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
+    <title></title>
+    <p>佐藤大和の出身校紹介ページ   (作成者：小路)</p>
+    <h1><center>岡山県立総社南高校</center></h1>
 </head>
+<center><img src="画像.png"></center>
+<center><img src="画像1.png"></center>         
+<h2><center>創立</center></h2>
+<p><center>1986年に創立</center></p>
 <body>
+<h3><center>4つの系</center></h3>
+<p><center>人文系・理数系・国際系・美術工芸系</center></p>
+<center><h4>特徴</h4></center>
+<p>２年時に４つの系（人文・理数・国際・美術工芸）から自分に合った系を選択し、その特徴を生かした探究的な学びを通して、一人一人の個性の伸長と進路実現が図られる点にあります。</p>
+<p><center>単位制の高校</center></p>
+<P><center>駅からが遠い</center></P>
 <script src="jsp/app.js"></script>
-</body>
+<body bgcolor="#00bfff"></body>
+<P><center>発生した事件</center></P>
 </html>
+
+
