cssを作成、html追加記述

--- a/satou.html
+++ b/satou.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" contact="width=device-width, initial-scale=1">
         <title>徳田の出身校紹介ページ</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/satou_style.css">
     </head>
     <body id="top">
         <!--ヘッダー-->
@@ -34,8 +34,8 @@
             <div class="logo-school"><img src="images/岡山県立岡山南高等学校_2017-9-28.jpg" alt=""></div>
             <p>学校名：岡山南高校</p>
             <p>創立：122年</p>
-            <P>特徴：</P>
-            <p>発生した事件：</p>
+            <P>特徴：女子が多い</P>
+            <p>発生した事件：かすDという数学が苦手な生徒に対して、質問攻めで生徒ひとり不登校にさしたやばい先生がいた</p>
 
              <!--フッター-->
         <footer>
