--- a/tokuda.html
+++ b/tokuda.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/tokuda_style.css">
-        <title>川上の学校紹介（作成者：徳田）</title>
+        <title>川上の出身校紹介（作成者：徳田）</title>
     </head>
-    <body>
+    <body id="haikeiColor" bgcolor=#ffffe0>
+        <script src="jsp/tokuda_app.js"></script>
         <nav id="g_navi">
             <ul>
                 <li><a href="index.html">TOP</a></li>
@@ -15,7 +16,11 @@
             </ul>
         </nav>
         <h1>川上の出身校紹介（作成者：徳田）</h1>
-        <img src="images/yakagekoukou.jpg">
+        <img id="koukou" src="images/yakagekoukou.jpg">
         <h2>学校名：岡山県立矢掛高等学校</h2>
+        <h2>創立：123年</h2>
+        <h2>起こった事件：天皇が来る予定がなくなりました。</h2>
+        <input type="button" value="背景色変更" onclick="changeColor1()">
+        <input type="button" value="背景色戻す" onclick="changeColor2()">
     </body>
 </html>
