リンク追加

--- a/kawakami.html
+++ b/kawakami.html
@@ -34,6 +34,13 @@
     <button id="resetButton">リセット</button>
     <div id="result"></div>
     <div id="counter">ボタンが押された回数: 0</div>
+    <ul>
+        <li><a href="index.html">ホーム</a></li>
+        <h3>班員一覧</h3>
+        <li><a href="koji.html">小路</a></li>
+        <li><a href="satou .html">佐藤</a></li>
+        <li><a href="tokuda.html">徳田</a></li>   
+    </ul>
 <script src="jsp/app.js"></script>
 </body>
 </html>
