--- a/tokuda.html
+++ b/tokuda.html
@@ -20,6 +20,10 @@
         <h2>学校名：岡山県立矢掛高等学校</h2>
         <h2>創立：123年</h2>
         <h2>起こった事件：天皇が来る予定がなくなりました。</h2>
+        <h2>みんなからのコメント</h2>
+        <p>川上：</p>
+        <p>小路：</p>
+        <p>佐藤：</p>
         <input type="button" value="背景色変更" onclick="changeColor1()">
         <input type="button" value="背景色戻す" onclick="changeColor2()">
     </body>
