--- a/kawakami.html
+++ b/kawakami.html
@@ -28,18 +28,19 @@
     <h2>創立：86年</h2>
     <h2>特徴：時間にルーズ</h2>
     <h2>所属クラス：３年G組</h2>
-    <h2>起きた事件：卒業式の日に誰かがトイレでたばこすっとってそれがばれてみんな持ち検されたり怒られたりして最悪の卒業式だった。</h2>
+    <h2>起きた事件：卒業式の日に誰かがトイレでたばこを吸っていたのがばれて<br>
+        みんな持ち検されたり怒られたりして最悪の卒業式だった。</h2>
     <h1>おみくじ</h1>
     <button id="drawButton">おみくじを引く</button>
     <button id="resetButton">リセット</button>
     <div id="result"></div>
     <div id="counter">ボタンが押された回数: 0</div>
+
     <ul>
-        <li><a href="index.html">ホーム</a></li>
-        <h3>班員一覧</h3>
+        <li><a href="index.html">TOP</a></li>
+        <li><a href="satou.html">佐藤</a></li>
         <li><a href="koji.html">小路</a></li>
-        <li><a href="satou .html">佐藤</a></li>
-        <li><a href="tokuda.html">徳田</a></li>   
+        <li><a href="tokuda.html">徳田</a></li>
     </ul>
 <script src="jsp/app.js"></script>
 </body>
