--- a/koji.html
+++ b/koji.html
@@ -62,5 +62,18 @@
 }
 </script>
 </html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>リンクの例</title>
+</head>
+<body>
+    <p><a href="tokuda.html"</a>徳田</p>
+    <p><a href="satou .html" >大和</a></p>
+    <p><a href="kawakami.html" >川上</a></p>
 
+</body>
+</html>
 </html>
