リンク修正

--- a/satou.html
+++ b/satou.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" contact="width=device-width, initial-scale=1">
         <title>徳田の出身校紹介ページ</title>
-        <link rel="stylesheet" href="css/satou_style.css">
+        <link rel="stylesheet" href="css/satou.css">
     </head>
     <body id="top">
         <!--ヘッダー-->
