--- a/koji.html
+++ b/koji.html
@@ -73,7 +73,7 @@
     <p><a href="tokuda.html"</a>徳田</p>
     <p><a href="satou.html" >大和</a></p>
     <p><a href="kawakami.html" >川上</a></p>
-    <P>"<index class="html"></index></P>
+    <P><index class="html"></index></P>
 </body>
 </html>
 </html>
