--- a/koji.html
+++ b/koji.html
@@ -1,8 +1,9 @@
 
 <html>
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/koji.css">
     <title></title>
     <p>佐藤大和の出身校紹介ページ   (作成者：小路)</p>
     <h1><center>岡山県立総社南高校</center></h1>
@@ -74,6 +75,7 @@
     <p><a href="satou.html" >大和</a></p>
     <p><a href="kawakami.html" >川上</a></p>
     <P><index class="html"></index></P>
+
 </body>
 </html>
 </html>
