--- a/koji.html
+++ b/koji.html
@@ -74,6 +74,7 @@
     <p><a href="tokuda.html"</a>徳田</p>
     <p><a href="satou.html" >大和</a></p>
     <p><a href="kawakami.html" >川上</a></p>
+    <P><a href="index.html"top</a></p>
     <P><index class="html"></index></P>
 
 </body>
