コメントに追加

--- a/kawakami.html
+++ b/kawakami.html
@@ -22,14 +22,18 @@
     </style>
 </head>
 <body>
-    <h2>小路の出身校紹介ページ（作成者：川上）</h2>
+    <h1>小路の出身校紹介ページ（作成者：川上）</h1>
     <img src="https://kasaoka.sub.jp/15/09/0905/DSC06608.jpg">
-    <h2>学校名：龍谷高校</h2>
+    <h1>学校名：龍谷高校</h1>
     <h2>創立：86年</h2>
     <h2>特徴：時間にルーズ</h2>
     <h2>所属クラス：３年G組</h2>
     <h2>起きた事件：卒業式の日に誰かがトイレでたばこを吸っていたのがばれて<br>
         みんな持ち検されたり怒られたりして最悪の卒業式だった。</h2>
+        <h1>みんなからのコメント</h1>
+        <h2>徳田：</h2>
+        <h2>小路：</h2>
+        <h2>佐藤：</h2>
     <h1>おみくじ</h1>
     <button id="drawButton">おみくじを引く</button>
     <button id="resetButton">リセット</button>
