--- a/koji.html
+++ b/koji.html
@@ -28,9 +28,9 @@
 <p><center>高校３年間同じクラスだったやつが３人退学したこと</center></p>
 
 <h5><center>班員からのコメント</center></h5>
-<p>佐藤</p>
-<P>徳田</P>
-<p>川上</p>
+<p>佐藤：</p>
+<P>徳田：</P>
+<p>川上：三年通って退学はかわいそうだなと思った。</p>
 
 <!DOCTYPE html>
 <html lang="ja">
