--- a/tokuda.html
+++ b/tokuda.html
@@ -23,7 +23,7 @@
         <h2>みんなからのコメント</h2>
         <p>川上：</p>
         <p>小路：</p>
-        <p>佐藤：</p>
+        <p>佐藤：天皇なんでこなくなったのか気なる</p>
         <input type="button" value="背景色変更" onclick="changeColor1()">
         <input type="button" value="背景色戻す" onclick="changeColor2()">
     </body>
