コメント欄

--- a/satou.html
+++ b/satou.html
@@ -37,6 +37,10 @@
             <P>特徴：女子が多い</P>
             <p>発生した事件：かすDという数学が苦手な生徒に対して、質問攻めで生徒ひとり不登校にさしたやばい先生がいた</p>
 
+            <p>班員のコメント</p>
+            <p>川上：</p>
+            <p>小路：</p>
+            <p>徳田：</p>
              <!--フッター-->
         <footer>
             <div class="gotop">
