--- a/koji.html
+++ b/koji.html
@@ -28,7 +28,7 @@
 <p><center>高校３年間同じクラスだったやつが３人退学したこと</center></p>
 
 <h5><center>班員からのコメント</center></h5>
-<p>佐藤：</p>
+<p>佐藤：そんなこともあったなと感慨深くなった</p>
 <P>徳田：</P>
 <p>川上：三年通って退学はかわいそうだなと思った。</p>
 
