--- a/kawakami.html
+++ b/kawakami.html
@@ -33,7 +33,7 @@
         <h1>みんなからのコメント</h1>
         <h2>徳田：</h2>
         <h2>小路：</h2>
-        <h2>佐藤：</h2>
+        <h2>佐藤：せっかくの卒業式がかわいそう</h2>
     <h1>おみくじ</h1>
     <button id="drawButton">おみくじを引く</button>
     <button id="resetButton">リセット</button>
