--- a/koji.html
+++ b/koji.html
@@ -75,7 +75,7 @@
     <p><a href="satou.html" >大和</a></p>
     <p><a href="kawakami.html" >川上</a></p>
     <P><a href="index.html"top</a></p>
-    <P><index class="html"></index></P>
+    <P><index class="html"></index>top</P>
 
 </body>
 </html>
