コメント追加

--- a/satou.html
+++ b/satou.html
@@ -38,7 +38,7 @@
             <p>発生した事件：かすDという数学が苦手な生徒に対して、質問攻めで生徒ひとり不登校にさしたやばい先生がいた</p>
 
             <p>班員のコメント</p>
-            <p>川上：</p>
+            <p>川上：教師としてよくないと思う。</p>
             <p>小路：</p>
             <p>徳田：</p>
              <!--フッター-->
