コメント追加

--- a/koji.html
+++ b/koji.html
@@ -29,7 +29,7 @@
 
 <h5><center>班員からのコメント</center></h5>
 <p>佐藤：そんなこともあったなと感慨深くなった</p>
-<P>徳田：</P>
+<P>徳田：自分の高校と違いすぎてびっくり</P>
 <p>川上：三年通って退学はかわいそうだなと思った。</p>
 
 <!DOCTYPE html>
