--- a/satou.html
+++ b/satou.html
@@ -40,7 +40,7 @@
             <p>班員のコメント</p>
             <p>川上：教師としてよくないと思う。</p>
             <p>小路：</p>
-            <p>徳田：</p>
+            <p>徳田：思い出したくない。</p>
              <!--フッター-->
         <footer>
             <div class="gotop">
