--- a/kawakami.html
+++ b/kawakami.html
@@ -32,7 +32,7 @@
         みんな持ち検されたり怒られたりして最悪の卒業式だった。</h2>
         <h1>みんなからのコメント</h1>
         <h2>徳田：そんな卒業式はしたくない</h2>
-        <h2>小路：</h2>
+        <h2>小路：最悪の卒業式だった</h2>
         <h2>佐藤：せっかくの卒業式がかわいそう</h2>
     <h1>おみくじ</h1>
     <button id="drawButton">おみくじを引く</button>
