--- a/tokuda.html
+++ b/tokuda.html
@@ -22,7 +22,7 @@
         <h2>起こった事件：天皇が来る予定がなくなりました。</h2>
         <h2>みんなからのコメント</h2>
         <p>川上：母校のことなので懐かしく感じた。</p>
-        <p>小路：</p>
+        <p>小路：天皇見てみたい</p>
         <p>佐藤：天皇なんでこなくなったのか気なる</p>
         <input type="button" value="背景色変更" onclick="changeColor1()">
         <input type="button" value="背景色戻す" onclick="changeColor2()">
