--- a/satou.html
+++ b/satou.html
@@ -39,7 +39,7 @@
 
             <p>班員のコメント</p>
             <p>川上：教師としてよくないと思う。</p>
-            <p>小路：</p>
+            <p>小路：女の子が多いのは良い。</p>
             <p>徳田：思い出したくない。</p>
              <!--フッター-->
         <footer>
