--- a/tokuda.html
+++ b/tokuda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <center>
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/tokuda_style.css">
@@ -27,4 +28,5 @@
         <input type="button" value="背景色変更" onclick="changeColor1()">
         <input type="button" value="背景色戻す" onclick="changeColor2()">
     </body>
+    </center>
 </html>
